--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
        Aquí debiera haber algún texto
    </p> 
    <article>
-       This is an article
+       Este es un articulo
        <p>
-           que puede estar separado en párrafos
+           thaty can be splitted in parragraphs
        </p>
        <p>
            de esta forma, se entiende mejor
